prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ingress-class: nginx
spec:
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 8080
  tls:
  - hosts:
    - prometheus.apps.shaker242.lab
    secretName: prometheus-secret
